--- a/Clustering Assignment.ipynb
+++ b/Clustering Assignment.ipynb
@@ -195,60 +195,39 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "fa921d42",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<bound method DataFrame.info of      Alcohol  Malic_Acid   Ash  Ash_Alcanity  Magnesium  Total_Phenols  \\\n",
-       "0      14.23        1.71  2.43          15.6        127           2.80   \n",
-       "1      13.20        1.78  2.14          11.2        100           2.65   \n",
-       "2      13.16        2.36  2.67          18.6        101           2.80   \n",
-       "3      14.37        1.95  2.50          16.8        113           3.85   \n",
-       "4      13.24        2.59  2.87          21.0        118           2.80   \n",
-       "..       ...         ...   ...           ...        ...            ...   \n",
-       "173    13.71        5.65  2.45          20.5         95           1.68   \n",
-       "174    13.40        3.91  2.48          23.0        102           1.80   \n",
-       "175    13.27        4.28  2.26          20.0        120           1.59   \n",
-       "176    13.17        2.59  2.37          20.0        120           1.65   \n",
-       "177    14.13        4.10  2.74          24.5         96           2.05   \n",
-       "\n",
-       "     Flavanoids  Nonflavanoid_Phenols  Proanthocyanins  Color_Intensity   Hue  \\\n",
-       "0          3.06                  0.28             2.29             5.64  1.04   \n",
-       "1          2.76                  0.26             1.28             4.38  1.05   \n",
-       "2          3.24                  0.30             2.81             5.68  1.03   \n",
-       "3          3.49                  0.24             2.18             7.80  0.86   \n",
-       "4          2.69                  0.39             1.82             4.32  1.04   \n",
-       "..          ...                   ...              ...              ...   ...   \n",
-       "173        0.61                  0.52             1.06             7.70  0.64   \n",
-       "174        0.75                  0.43             1.41             7.30  0.70   \n",
-       "175        0.69                  0.43             1.35            10.20  0.59   \n",
-       "176        0.68                  0.53             1.46             9.30  0.60   \n",
-       "177        0.76                  0.56             1.35             9.20  0.61   \n",
-       "\n",
-       "     OD280  Proline  \n",
-       "0     3.92     1065  \n",
-       "1     3.40     1050  \n",
-       "2     3.17     1185  \n",
-       "3     3.45     1480  \n",
-       "4     2.93      735  \n",
-       "..     ...      ...  \n",
-       "173   1.74      740  \n",
-       "174   1.56      750  \n",
-       "175   1.56      835  \n",
-       "176   1.62      840  \n",
-       "177   1.60      560  \n",
-       "\n",
-       "[178 rows x 13 columns]>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 178 entries, 0 to 177\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   Alcohol               178 non-null    float64\n",
+      " 1   Malic_Acid            178 non-null    float64\n",
+      " 2   Ash                   178 non-null    float64\n",
+      " 3   Ash_Alcanity          178 non-null    float64\n",
+      " 4   Magnesium             178 non-null    int64  \n",
+      " 5   Total_Phenols         178 non-null    float64\n",
+      " 6   Flavanoids            178 non-null    float64\n",
+      " 7   Nonflavanoid_Phenols  178 non-null    float64\n",
+      " 8   Proanthocyanins       178 non-null    float64\n",
+      " 9   Color_Intensity       178 non-null    float64\n",
+      " 10  Hue                   178 non-null    float64\n",
+      " 11  OD280                 178 non-null    float64\n",
+      " 12  Proline               178 non-null    int64  \n",
+      "dtypes: float64(11), int64(2)\n",
+      "memory usage: 18.2 KB\n"
+     ]
     }
    ],
    "source": [
-    "data.info"
+    "data.info()"
    ]
   },
   {
@@ -604,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ba63286f",
+   "id": "5d481b7d",
    "metadata": {},
    "outputs": [
     {
@@ -631,9 +610,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4b4a4adf",
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "bb7a79cc",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5606726948394264"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sil_ahc1 = silhouette_score(data, y_ahc1)\n",
     "sil_ahc1"
@@ -641,19 +633,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86cc76da",
+   "id": "db1db0d1",
    "metadata": {},
    "source": [
-    "### We can observe that Silhouette score is more when number of clusters are 3 in both cases. Therefore, the optimum number of clusters taken will be 3."
+    "### We can observe that Silhouette score is slightly more, when number of clusters are 3 in both cases. Therefore, the optimum number of clusters taken will be 3."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d8f8b8a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
